--- a/account-overview.html
+++ b/account-overview.html
@@ -16,7 +16,7 @@
                 <div class="flex items-center justify-between">
                     <div class="flex items-center space-x-8">
                         <div class="shrink-0">
-                            <a href="#" title="" class="">
+                            <a href="/index.html" title="" class="">
                                 <img class="block w-auto h-8 dark:hidden"
                                     src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/logo-full.svg" alt="">
                                 <img class="hidden w-auto h-8 dark:block"
@@ -81,7 +81,7 @@
                         </button>
 
                         <div id="myCartDropdown1"
-                            class="hidden z-10 mx-auto max-w-sm space-y-4 overflow-hidden rounded-lg bg-white p-4 antialiased shadow-lg dark:bg-gray-800">
+                            class="hidden z-50 mx-auto max-w-sm space-y-4 overflow-hidden rounded-lg bg-white p-4 antialiased shadow-lg dark:bg-gray-800">
                             <div class="grid grid-cols-2">
                                 <div>
                                     <a href="#"
@@ -259,7 +259,7 @@
                         </button>
 
                         <div id="userDropdown1"
-                            class="hidden z-10 w-56 divide-y divide-gray-100 overflow-hidden overflow-y-auto rounded-lg bg-white antialiased shadow dark:divide-gray-600 dark:bg-gray-700">
+                            class="hidden z-50 w-56 divide-y divide-gray-100 overflow-hidden overflow-y-auto rounded-lg bg-white antialiased shadow dark:divide-gray-600 dark:bg-gray-700">
                             <ul class="p-2 text-start text-sm font-medium text-gray-900 dark:text-white">
                                 <li><a href="/account-overview.html" title=""
                                         class="inline-flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
@@ -282,7 +282,7 @@
                             </ul>
 
                             <div class="p-2 text-sm font-medium text-gray-900 dark:text-white">
-                                <a href="#" title=""
+                                <a href="/login.html" title=""
                                     class="inline-flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
                                     Sign Out </a>
                             </div>
@@ -301,25 +301,7 @@
                             </svg>
                         </button>
 
-                        <button id="theme-toggle" data-tooltip-target="tooltip-toggle" type="button"
-                            class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
-                            <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor"
-                                viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
-                            </svg>
-                            <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor"
-                                viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
-                                    fill-rule="evenodd" clip-rule="evenodd"></path>
-                            </svg>
-                        </button>
-
-                        <div id="tooltip-toggle" role="tooltip"
-                            class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip">
-                            Toggle dark mode
-                            <div class="tooltip-arrow" data-popper-arrow></div>
-                        </div>
+                        
                     </div>
                 </div>
 
@@ -327,22 +309,22 @@
                     class="bg-gray-50 dark:bg-gray-700 dark:border-gray-600 border border-gray-200 rounded-lg py-3 hidden px-4 mt-4">
                     <ul class="text-gray-900 dark:text-white text-sm font-medium dark:text-white space-y-3">
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Home</a>
+                            <a href="/index.html" class="hover:text-blue-700 dark:hover:text-blue-500">Home</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Best Sellers</a>
+                            <a href="/product-listing.html" class="hover:text-blue-700 dark:hover:text-blue-500">Best Sellers</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Gift Ideas</a>
+                            <a href="/product-listing.html" class="hover:text-blue-700 dark:hover:text-blue-500">Gift Ideas</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Games</a>
+                            <a href="/product-listing.html" class="hover:text-blue-700 dark:hover:text-blue-500">Games</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Electronics</a>
+                            <a href="/product-listing.html" class="hover:text-blue-700 dark:hover:text-blue-500">Electronics</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Home & Garden</a>
+                            <a href="/contact-us.html" class="hover:text-blue-700 dark:hover:text-blue-500">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -1084,7 +1066,7 @@
                                 </div>
                             </div>
                             <div class="mt-4 border-t border-gray-200 pt-4 dark:border-gray-700 md:mt-6 md:pt-6">
-                                <button type="button"
+                                <a href="/orders-overview.html"
                                     class="inline-flex w-full items-center justify-center rounded-lg bg-blue-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 sm:w-auto">
                                     <svg class="-ms-0.5 me-1.5 h-4 w-4" aria-hidden="true"
                                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -1095,7 +1077,7 @@
                                             d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
                                     </svg>
                                     See all orders
-                                </button>
+                                </a>
                             </div>
                         </div>
                         <div
