--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="flex items-center justify-between">
                     <div class="flex items-center space-x-8">
                         <div class="shrink-0">
-                            <a href="#" title="" class="">
+                            <a href="/index.html" title="" class="">
                                 <img class="block w-auto h-8 dark:hidden"
                                     src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/logo-full.svg" alt="">
                                 <img class="hidden w-auto h-8 dark:block"
@@ -81,7 +81,7 @@
                         </button>
 
                         <div id="myCartDropdown1"
-                            class="hidden z-10 mx-auto max-w-sm space-y-4 overflow-hidden rounded-lg bg-white p-4 antialiased shadow-lg dark:bg-gray-800">
+                            class="hidden z-50 mx-auto max-w-sm space-y-4 overflow-hidden rounded-lg bg-white p-4 antialiased shadow-lg dark:bg-gray-800">
                             <div class="grid grid-cols-2">
                                 <div>
                                     <a href="#"
@@ -259,7 +259,7 @@
                         </button>
 
                         <div id="userDropdown1"
-                            class="hidden z-10 w-56 divide-y divide-gray-100 overflow-hidden overflow-y-auto rounded-lg bg-white antialiased shadow dark:divide-gray-600 dark:bg-gray-700">
+                            class="hidden z-50 w-56 divide-y divide-gray-100 overflow-hidden overflow-y-auto rounded-lg bg-white antialiased shadow dark:divide-gray-600 dark:bg-gray-700">
                             <ul class="p-2 text-start text-sm font-medium text-gray-900 dark:text-white">
                                 <li><a href="/account-overview.html" title=""
                                         class="inline-flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
@@ -282,7 +282,7 @@
                             </ul>
 
                             <div class="p-2 text-sm font-medium text-gray-900 dark:text-white">
-                                <a href="#" title=""
+                                <a href="/login.html" title=""
                                     class="inline-flex w-full items-center gap-2 rounded-md px-3 py-2 text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
                                     Sign Out </a>
                             </div>
@@ -307,22 +307,22 @@
                     class="bg-gray-50 dark:bg-gray-700 dark:border-gray-600 border border-gray-200 rounded-lg py-3 hidden px-4 mt-4">
                     <ul class="text-gray-900 dark:text-white text-sm font-medium dark:text-white space-y-3">
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Home</a>
+                            <a href="/index.html" class="hover:text-blue-700 dark:hover:text-blue-500">Home</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Best Sellers</a>
+                            <a href="/product-listing.html" class="hover:text-blue-700 dark:hover:text-blue-500">Best Sellers</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Gift Ideas</a>
+                            <a href="/product-listing.html" class="hover:text-blue-700 dark:hover:text-blue-500">Gift Ideas</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Games</a>
+                            <a href="/product-listing.html" class="hover:text-blue-700 dark:hover:text-blue-500">Games</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Electronics</a>
+                            <a href="/product-listing.html" class="hover:text-blue-700 dark:hover:text-blue-500">Electronics</a>
                         </li>
                         <li>
-                            <a href="#" class="hover:text-blue-700 dark:hover:text-blue-500">Home & Garden</a>
+                            <a href="/contact-us.html" class="hover:text-blue-700 dark:hover:text-blue-500">Contact Us</a>
                         </li>
                     </ul>
                 </div>
