--- a/contact-us.html
+++ b/contact-us.html
@@ -52,7 +52,7 @@
                             <li class="shrink-0">
                                 <a href="/contact-us.html" title=""
                                     class="text-sm font-medium text-gray-900 hover:text-blue-700 dark:text-white dark:hover:text-blue-500">
-                                    Sell
+                                    Contact Us
                                 </a>
                             </li>
                         </ul>
